<resources>
    <string name="app_name">앱미터</string>
    <string name="title_activity_welcome">초기설정</string>

    <string name="info_permission_overlay">다른화면위에 그리기라는 권한이 필요합니다.</string>

    <string name="main_tv_meter">미터기</string>
    <string name="main_tv_start">터치하여 시작하기</string>
    <string name="main_tv_taxi">택시</string>

    <string name="meter_btn_start">운행 시작</string>
    <string name="meter_btn_stop">운행 종료</string>

    <string name="meter_dialog_finish_title">운행이 종료되었습니다.</string>
    <string name="meter_dialog_gps_unavailable">GPS를 일시적으로 사용할 수 없습니다.</string>
    <string name="meter_dialog_gps_unavailable_cancel">취소</string>
    <string name="meter_dialog_gps_unavailable_open_setting">GPS 설정으로 이동하기</string>
    <string name="meter_dialog_ok">확인</string>
    <string name="meter_noti_channel_description">미터기가 실행중일 때 표시됩니다.</string>
    <string name="meter_noti_channel_name">실행 중 알림</string>
    <string name="meter_noti_text">택시미터기가 실행중입니다.</string>
    <string name="meter_noti_title">택시미터기</string>
    <string name="meter_toast_night_extra_disabled">심야할증이 비활성화되었습니다.</string>
    <string name="meter_toast_night_extra_enabled">최종요금에 심야할증이 적용됩니다.</string>
    <string name="meter_toast_onpause_warning">미터기 화면을 벗어나는 경우 GPS 동작이 불안정할 수 있습니다.</string>
    <string name="meter_toast_outcity_extra_disabled">시외할증이 비활성화되었습니다.</string>
    <string name="meter_toast_outcity_extra_enabled">최종요금에 시외할증이 적용됩니다.</string>
    <string name="meter_toast_start_first">운행시작 버튼을 먼저 눌러주세요.</string>
    <string name="meter_toast_stop_first">운행종료 버튼을 먼저 눌러주세요.</string>
    <string name="meter_toggle_night_disable">심야할증 미적용</string>
    <string name="meter_toggle_night_enable">심야할증 적용</string>
    <string name="meter_toggle_outcity_disable">시외할증 미적용</string>
    <string name="meter_toggle_outcity_enable">시외할증 적용</string>
    <string name="meter_tv_cost_mode_default">기본요금</string>
    <string name="meter_tv_cost_mode_distance">거리비례 요금</string>
    <string name="meter_tv_cost_mode_text">요금 방식</string>
    <string name="meter_tv_cost_mode_time">시간비례 요금</string>
    <string name="meter_tv_current_cost">0원</string>
    <string name="meter_tv_current_cost_format">%d원</string>
    <string name="meter_tv_current_speed">0.0km/h</string>
    <string name="meter_tv_current_speed_format">%.1fkm/h</string>
    <string name="meter_tv_current_speed_text">현재속도</string>
    <string name="meter_tv_info_gps_unavailable">일시적으로 GPS를 사용할 수 없습니다.</string>
    <string name="meter_tv_info_press_start">운행시작 버튼을 눌러주세요.</string>
    <string name="meter_tv_info_running">미터기가 동작중입니다.</string>
    <string name="meter_tv_moving_distance">0.0km</string>
    <string name="meter_tv_moving_distance_format">%.1fkm</string>
    <string name="meter_tv_moving_distance_text">총 이동거리</string>
    <string name="meter_tv_moving_time">0초</string>
    <string name="meter_tv_moving_time_format">%d초</string>
    <string name="meter_tv_moving_time_text">총 이동시간</string>

    <string name="setting_dialog_cancel">취소</string>
    <string name="setting_dialog_ok">확인</string>
    <string name="setting_radio_busan">부산</string>
    <string name="setting_radio_daegu">대구</string>
    <string name="setting_radio_daejeon">대전</string>
    <string name="setting_radio_etc">기타</string>
    <string name="setting_radio_gwangju">광주</string>
    <string name="setting_radio_gyeonggi">경기</string>
    <string name="setting_radio_incheon">인천</string>
    <string name="setting_radio_seoul">" 서울"</string>
    <string name="setting_radio_ulsan">울산</string>
    <string name="setting_title">설정</string>
    <string name="setting_toast_input_wrong">일부 입력란이 입력되지 않았습니다.</string>
    <string name="setting_toast_saved">저장되었습니다.</string>
    <string name="setting_tv_done">완료</string>
    <string name="setting_tv_info">일반 중형택시 기준의 요금입니다. 대형 및 기타택시의 경우 기타 메뉴에서 직접 입력해주세요.</string>
    <string name="setting_tv_select">지역을 선택하세요.</string>

    <string name="welcome_btn_done">완료</string>
    <string name="welcome_btn_gps_ok">확인</string>
    <string name="welcome_btn_location_grant">위치정보 사용 권한 허용하기</string>
    <string name="welcome_dialog_cancel">취소</string>
    <string name="welcome_dialog_location_select">지역을 선택하거나 직접 입력해주세요.</string>
    <string name="welcome_dialog_ok">확인</string>
    <string name="welcome_radio_busan">부산</string>
    <string name="welcome_radio_daegu">대구</string>
    <string name="welcome_radio_daejeon">대전</string>
    <string name="welcome_radio_etc">기타</string>
    <string name="welcome_radio_gwangju">광주</string>
    <string name="welcome_radio_gyeonggi">경기</string>
    <string name="welcome_radio_incheon">인천</string>
    <string name="welcome_radio_seoul">서울</string>
    <string name="welcome_radio_ulsan">울산</string>
    <string name="welcome_toast_done">초기설정이 완료되었습니다.</string>
    <string name="welcome_toast_input_wrong">일부 입력란이 입력되지 않았습니다.</string>
    <string name="welcome_toast_location_granted">위치정보사용 권한이 허용되었습니다.</string>
    <string name="welcome_toast_location_not_granted">위치정보 사용 권한이 거부되었습니다. [설정] > [앱 ] > [택시미터기]로 이동하여 직접 허용해주세요.</string>
    <string name="welcome_tv_gps_info">GPS 위성을 활용하는 앱의 특성상 GPS 위성 상태 및 주변 환경에 따라 GPS 정보가 올바르지 않을 수 있습니다. 이로 인해 택시미터기의 표시 요금에 차이가 생길 수 있으며, 이에 대한 책임은 사용자에게 있음을 미리 알립니다.</string>
    <string name="welcome_tv_location_info">애플리케이션이 올바르게 동작하기 위해 위치정보 사용 권한을 허용해주셔야 합니다.</string>
    <string name="welcome_tv_location_select">지역을 선택해주세요.</string>
    <string name="welcome_tv_location_select_info">일반 중형택시 기준의 요금입니다. 대형 및 기타택시의 경우 기타 메뉴에서 직접 입력해주세요.</string>

    <string name="payment_pay">요금</string>
    <string name="payment_addpay">추가</string>
    <string name="payment_finpay">합산</string>
    <string name="payment_top_payment">지불</string>
    <string name="payment_drv_time">시간</string>
    <string name="payment_distance">주행 거리: 0.0km</string>

    <string name="register_driver">운전자 등록</string>
    <string name="title_activity_setting">SettingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
